# ferropt

./: Cargo.toml  README.md  qwerty.json
benches/: cost.rs  text_to_keys.rs
gutenberg/: alice-in-wonderland.txt  brothers-karamazov.txt  dorian-gray.txt  dracula.txt  frankenstein.txt  grimm.txt  huckleberry-finn.txt  iliad.txt  jekyll-and-hyde.txt  moby-dick.txt  sherlock-holmes.txt  war-and-peace.txt  wizard-of-oz.txt
src/: anneal.rs  cost.rs  evolve.rs  layout.rs  lib.rs  main.rs  simple_cost.rs
src/cost/: heuristic.rs  measured.rs  mod.rs  simple.rs
