[package]
name = "ferropt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.prof]
inherits = "release"
lto = false
debug = true

[dependencies]
encode_unicode = "0.3"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rayon = "1.5"
ahash = { version = "0.7", features = [ "serde" ] }
