[package]
name = "ferropt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "text_to_keys"
harness = false

[[bench]]
name = "cost"
harness = false

[features]
dhat-heap = [ "dhat" ]
dhat-ad-hoc = [ "dhat" ]

[profile.release]
lto = "thin"

[profile.prof]
inherits = "release"
lto = false
debug = true

[dev-dependencies]
criterion = "0.3"

[dependencies]
encoding_rs = "0.8.31"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rayon = "1.5"
# ahash = { version = "0.7", features = [ "serde" ] }
regex = "1.5.6"
lazy_static = "1.4.0"
# sprog = { path = "../sprog" }
indicatif = { version = "0.16.2", features = ["with_rayon"] }
enum-map = "2.4.0"
dhat = { version = "0.3.0", optional = true }
clap = { version = "3.2.16", features = ["derive"] }
arrayvec = "0.7.2"
